data/derived/comb/progs/unify/prog2278.ml.out
Characters 13-61:
  let _ = eval ((Times(Sine(VarX),Cosine(Average(VarX,VarY))))), 0.5, 0.2;;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
